--- a/index.html.html
+++ b/index.html.html
@@ -106,6 +106,7 @@
         </article>
         </main>
         <footer>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam nisi dolore recusandae doloribus, neque a deserunt deleniti ullam dolor. Quidem voluptates obcaecati doloribus dolores asperiores culpa qui sit consequuntur illum.</p>
             <p>Site criado por <a href="https://gustavoguanabara.github.io/" target="_blank" class="externo">Gustavo Guanabara</a> para o <a href="https://www.youtube.com/@CursoemVideo" target="_blank" class="externo">cursoemvideo</a></p>
         </footer>
 </body>
