--- a/index.html.html
+++ b/index.html.html
@@ -103,7 +103,7 @@
             </aside>
             
                 <p>Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema Android e seu simpático mascote.</p>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam nisi dolore recusandae doloribus, neque a deserunt deleniti ullam dolor. Quidem voluptates obcaecati doloribus dolores asperiores culpa qui sit consequuntur illum.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam nisi dolore recusandae doloribus, neque a deserunt deleniti ullam dolor. Quidem voluptates obcaecati doloribus dolores asperiores culpa qui sit consequuntur illum. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus, iure! Aspernatur aliquam quam nemo voluptates, fugiat eveniet suscipit ipsa pariatur labore! Ipsum voluptate asperiores, vel natus quasi reiciendis laboriosam explicabo.</p>
         </article>
         </main>
         <footer>
