--- a/index.html.html
+++ b/index.html.html
@@ -106,7 +106,7 @@
         <footer>
             
             
-            <p>Site criado por <a href="https://gustavoguanabara.github.io/" target="_blank" class="externo">Gustavo Guanabara</a> para o <a href="https://www.youtube.com/@CursoemVideo" target="_blank" class="externo">cursoemvideo</a></p>
+            <p>Site criado por <a href="https://github.com/Brxno1" target="_blank" class="externo">Bruno Santos</a> para o <a href="https://www.youtube.com/@yxksha_" target="_blank" class="externo">Redd</a></p>
         </footer>
 </body>
 </html>
